<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="144dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/d120"
                android:orientation="vertical"
                android:gravity="center"
                android:background="@color/blue_agent">
                <com.pasyappagent.pasy.component.fontview.RobotoBoldTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/agent_name"
                    android:textSize="@dimen/d25"
                    android:textColor="@color/white"/>
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/agent_mobile"
                    android:textColor="@color/white"/>
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/star_premium"
                    android:src="@drawable/star_premium"/>
            </LinearLayout>
            <Button
                android:layout_width="@dimen/d150"
                android:layout_height="@dimen/d45"
                android:layout_alignParentBottom="true"
                android:layout_centerHorizontal="true"
                android:id="@+id/premium_button"
                android:background="@drawable/premium_green_btn"
                android:textColor="@color/white"
                android:text="@string/daftar_premium"/>
        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            android:layout_marginTop="@dimen/d20"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_premium"
                android:visibility="gone"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/d20"
                    android:layout_marginRight="@dimen/d20"
                    android:layout_marginLeft="@dimen/d20"
                    android:orientation="vertical">
                    <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/kode_referral_txt"/>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <com.pasyappagent.pasy.component.fontview.RobotoBoldTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/refferal_code"
                            android:layout_centerVertical="true"
                            android:textSize="@dimen/d30"/>
                        <Button
                            android:layout_width="@dimen/d100"
                            android:layout_height="@dimen/d40"
                            android:layout_alignParentRight="true"
                            android:textColor="@color/white"
                            android:text="@string/salin"
                            android:id="@+id/copy_refferal_code"
                            android:background="@drawable/green_button"/>
                    </RelativeLayout>
                </LinearLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/starDust_opacity_40"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d20"
                    android:id="@+id/agent_premium"
                    android:orientation="horizontal">
                    <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:text="@string/agen_premium"/>
                    <ImageView
                        android:layout_width="@dimen/d15"
                        android:layout_height="@dimen/d15"
                        android:src="@drawable/arrow"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/starDust_opacity_40"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/container_cashback"
                android:orientation="vertical">
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="@dimen/d20"
                    android:orientation="horizontal">
                    <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:textColor="#2CC013"
                        android:text="Saldo Cashback"/>
                    <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="16dp"
                        android:id="@+id/amount_cashback"
                        android:text="Rp 0"
                        android:textColor="#2CC013"
                        android:layout_alignParentRight="true"/>
                </RelativeLayout>

                <View
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/starDust_opacity_40"/>
            </LinearLayout>


            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/send_balance"
                android:padding="@dimen/d20"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/kirim_saldo"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starDust_opacity_40"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d20"
                android:id="@+id/edit_profile"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/edit_profil"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starDust_opacity_40"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d20"
                android:id="@+id/change_pin"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/pengaturan_pin"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starDust_opacity_40"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/terms"
                android:padding="@dimen/d20"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/syarat_ketentuan"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starDust_opacity_40"/>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/faq"
                android:padding="@dimen/d20"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/faq"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/starDust_opacity_40"/>
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/d20"
                android:id="@+id/logout"
                android:orientation="horizontal">
                <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="16dp"
                    android:text="@string/keluar"/>
                <ImageView
                    android:layout_width="@dimen/d15"
                    android:layout_height="@dimen/d15"
                    android:src="@drawable/arrow"
                    android:layout_alignParentRight="true"/>
            </RelativeLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>