<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <include layout="@layout/toolbar"/>
    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d20">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            >
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/bpjs_ketenagakerjaan"/>

            <com.pasyappagent.pasy.component.fontview.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:text="Pengertian"/>

            <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:text="@string/info_pengertian"/>

            <com.pasyappagent.pasy.component.fontview.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:text="Kepesertaan"/>

            <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:text="@string/info_pendaftaran"/>

            <com.pasyappagent.pasy.component.fontview.RobotoBoldTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:text="Jenis Program &#38; Manfaat:"/>

            <com.pasyappagent.pasy.component.fontview.RobotoRegularTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d10"
                android:text="@string/info_program"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/d20"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Tahu lebih banyak,"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/d5"
                    android:textColor="#3C92CA"
                    android:text="kunjungi website"/>
            </LinearLayout>

            <Button
                android:layout_width="@dimen/d150"
                android:layout_height="@dimen/d40"
                android:layout_gravity="center"
                android:layout_marginTop="@dimen/d40"
                android:background="@drawable/green_button"
                android:text="daftar"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>


</LinearLayout>